--- a/DevOps-Project-Zomato-Ali/jenkinsfile
+++ b/DevOps-Project-Zomato-Ali/jenkinsfile
@@ -1,108 +1,125 @@
 pipeline {
-    agent any
-    tools {
-        jdk 'jdk17'
-        nodejs 'node23'
+  agent any
+  tools {
+    jdk 'jdk17'
+    nodejs 'NodeJS25.1.0'
+  }
+  environment {
+    SCANNER_HOME = tool 'sonar-scanner'   // Jenkins tool name
+    IMAGE = "samikhan123/zomato:latest"   // keep one repo/tag everywhere
+  }
+  options {
+    timestamps()
+  }
+  stages {
+    stage('Clean workspace') {
+      steps { cleanWs() }
     }
-    environment {
-        SCANNER_HOME=tool 'sonar-scanner'
+
+    stage('Git Checkout') {
+      steps {
+        // If this is a Multibranch Pipeline, prefer: checkout scm
+        git branch: 'main', url: 'https://github.com/DevopsAliUserAccount/ZomatoProject.git'
+      }
     }
-    stages {
-        stage ("clean workspace") {
-            steps {
-                cleanWs()
-            }
+
+    stage('SonarQube Analysis') {
+      steps {
+        withSonarQubeEnv('sonar-server') { // name from Manage Jenkins > System > SonarQube servers
+          sh """
+            "${SCANNER_HOME}/bin/sonar-scanner" \
+              -Dsonar.projectKey=zomato \
+              -Dsonar.projectName=zomato
+          """
         }
-        stage ("Git Checkout") {
-            steps {
-                git 'https://github.com/KastroVKiran/Zomato-Project-Kastro.git'
-            }
-        }
-        stage("Sonarqube Analysis"){
-            steps{
-                withSonarQubeEnv('sonar-server') {
-                    sh ''' $SCANNER_HOME/bin/sonar-scanner -Dsonar.projectName=zomato \
-                    -Dsonar.projectKey=zomato '''
-                }
-            }
-        }
-        stage("Code Quality Gate"){
-           steps {
-                script {
-                    waitForQualityGate abortPipeline: false, credentialsId: 'Sonar-token' 
-                }
-            } 
-        }
-        stage("Install NPM Dependencies") {
-            steps {
-                sh "npm install"
-            }
-        }
-        stage('OWASP FS SCAN') {
-            steps {
-                dependencyCheck additionalArguments: '--scan ./ --disableYarnAudit --disableNodeAudit -n', odcInstallation: 'DP-Check'
-                dependencyCheckPublisher pattern: '**/dependency-check-report.xml'
+      }
     }
-}
-        stage ("Trivy File Scan") {
-            steps {
-                sh "trivy fs . > trivy.txt"
-            }
+
+    stage('Quality Gate') {
+      steps {
+        timeout(time: 10, unit: 'MINUTES') {
+          // Requires SonarQube webhook back to Jenkins to be configured
+          waitForQualityGate abortPipeline: true
         }
-        stage ("Build Docker Image") {
-            steps {
-                sh "docker build -t zomato ."
-            }
-        }
-        stage ("Tag & Push to DockerHub") {
-            steps {
-                script {
-                    withDockerRegistry(credentialsId: 'docker') {
-                        sh "docker tag zomato kastrov/zomato:latest "
-                        sh "docker push kastrov/zomato:latest "
-                    }
-                }
-            }
-        }
-        stage('Docker Scout Image') {
-            steps {
-                script{
-                   withDockerRegistry(credentialsId: 'docker', toolName: 'docker'){
-                       sh 'docker-scout quickview kastrov/zomato:latest'
-                       sh 'docker-scout cves kastrov/zomato:latest'
-                       sh 'docker-scout recommendations kastrov/zomato:latest'
-                   }
-                }
-            }
-        }
-        stage ("Deploy to Container") {
-            steps {
-                sh 'docker run -d --name zomato -p 3000:3000 kastrov/zomato:latest'
-            }
-        }
+      }
     }
-    post {
+
+    stage('Install NPM Dependencies') {
+      steps { sh 'npm ci || npm install' }
+    }
+
+    stage('OWASP Dependency-Check') {
+      steps {
+        dependencyCheck additionalArguments: '--scan ./ --disableYarnAudit --disableNodeAudit -n',
+                         odcInstallation: 'DP-Check'
+        dependencyCheckPublisher pattern: '**/dependency-check-report.xml'
+      }
+    }
+
+    stage('Trivy File Scan') {
+      steps {
+        // Not failing the build; just capturing output
+        sh 'trivy fs . > trivy.txt || true'
+      }
+    }
+
+    stage('Build Docker Image') {
+      steps {
+        sh 'docker build -t "$IMAGE" .'
+      }
+    }
+
+    stage('Tag & Push to Docker Hub') {
+      steps {
+        withDockerRegistry(credentialsId: 'docker', url: 'https://index.docker.io/v1/') {
+          sh 'docker push "$IMAGE"'
+        }
+      }
+    }
+
+    stage('Docker Scout (insights)') {
+      steps {
+        // Docker Scout is a docker CLI plugin: use `docker scout ...`
+        sh '''
+          docker scout quickview "$IMAGE" || true
+          docker scout cves --only-severity high,critical "$IMAGE" || true
+          docker scout recommendations "$IMAGE" || true
+        '''
+      }
+    }
+
+    stage('Deploy to Container') {
+      steps {
+        sh '''
+          docker rm -f zomato || true
+          docker run -d --name zomato -p 3000:3000 "$IMAGE"
+        '''
+      }
+    }
+  }
+
+  post {
     always {
-        emailext attachLog: true,
-            subject: "'${currentBuild.result}'",
-            body: """
-                <html>
-                <body>
-                    <div style="background-color: #FFA07A; padding: 10px; margin-bottom: 10px;">
-                        <p style="color: white; font-weight: bold;">Project: ${env.JOB_NAME}</p>
-                    </div>
-                    <div style="background-color: #90EE90; padding: 10px; margin-bottom: 10px;">
-                        <p style="color: white; font-weight: bold;">Build Number: ${env.BUILD_NUMBER}</p>
-                    </div>
-                    <div style="background-color: #87CEEB; padding: 10px; margin-bottom: 10px;">
-                        <p style="color: white; font-weight: bold;">URL: ${env.BUILD_URL}</p>
-                    </div>
-                </body>
-                </html>
-            """,
-            to: 'kastrokiran@gmail.com',
-            mimeType: 'text/html',
-            attachmentsPattern: 'trivy.txt'
-        }
+      emailext(
+        to: 'ali223khan@gmail.com',
+        subject: "'${currentBuild.result}' - ${env.JOB_NAME} #${env.BUILD_NUMBER}",
+        mimeType: 'text/html',
+        attachLog: true,
+        attachmentsPattern: 'trivy.txt',
+        body: """
+          <html><body>
+            <div style="background:#FFA07A;padding:10px;margin-bottom:10px;color:#fff;font-weight:bold;">
+              Project: ${env.JOB_NAME}
+            </div>
+            <div style="background:#90EE90;padding:10px;margin-bottom:10px;color:#fff;font-weight:bold;">
+              Build Number: ${env.BUILD_NUMBER}
+            </div>
+            <div style="background:#87CEEB;padding:10px;margin-bottom:10px;color:#fff;font-weight:bold;">
+              URL: <a style="color:#fff" href="${env.BUILD_URL}">${env.BUILD_URL}</a>
+            </div>
+          </body></html>
+        """
+      )
     }
+  }
 }
